# renimOS

./: .gitignore  Cargo.toml  README.md  build-run.sh  build-test.sh  build.rs  run.py
boot/: Cargo.toml
boot/src/: main.rs
bootloader/bootloader-0.11.4/: .cargo_vcs_info.json  Cargo.toml  build.rs
bootloader/bootloader-x86_64-bios-stage-4-0.11.4/: .cargo_vcs_info.json  Cargo.toml
bootloader/bootloader-x86_64-common-0.11.4/: .cargo_vcs_info.json  Cargo.toml
bootloader/bootloader-x86_64-common-0.11.4/src/: lib.rs
bootloader/bootloader-x86_64-uefi-0.11.4/: .cargo_vcs_info.json  Cargo.toml
bootloader/bootloader_api-0.11.4/: .cargo_vcs_info.json  Cargo.toml
bootloader/bootloader_api-0.11.4/src/: info.rs
kernel/: Cargo.toml  README.md  build.rs
kernel/src/: main.rs  serial.rs  spinlock.rs  test.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: gdt.rs  interrupts.rs  mod.rs
kernel/src/display/: writer.rs
kernel/src/display/fonts/: mod.rs  psf1.rs  psf2.rs
kernel/src/test_framework/: mod.rs  test_main.rs
kernel/test-proc-macro/: Cargo.toml
kernel/test-proc-macro/src/: lib.rs
kernel/test-runner/: Cargo.toml
kernel/test-runner/src/: lib.rs
runner/: Cargo.toml  build.rs
runner/src/: main.rs
src/: interrupts.rs  main.rs  prelude.rs  serial.rs  spinlock.rs  test.rs
src/arch/: mod.rs
src/arch/interrupts/: mod.rs  x64.rs
src/arch/x86_64/: interrupts.rs  mod.rs  pic.rs
src/display/: colour.rs  mod.rs  writer.rs
src/display/fonts/: mod.rs
src/fonts/: mod.rs  psf1.rs
