[package]
name = "renim"
version = "0.1.0"
edition = "2021"

[build-dependencies.bootloader]
path = "bootloader/bootloader-0.11.4"

[build-dependencies.renim-kernel]
path = "kernel"
artifact = "bin"
target = "x86_64-unknown-none"

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"

[workspace]
members = [
    "kernel",
    "kernel/test-proc-macro",
    "bootloader/bootloader-0.11.4",
    "bootloader/bootloader-x86_64-common-0.11.4",
    "bootloader/bootloader-x86_64-uefi-0.11.4",
    "bootloader/bootloader-x86_64-bios-stage-4-0.11.4"
]

[features]
test = [ "renim-kernel/test" ]
