[package]
name = "renim"
version = "0.1.0"
edition = "2021"

[build-dependencies.bootloader]
path = "../bootloader/bootloader-0.11.4"

[build-dependencies.renim-kernel]
path = "../kernel"
artifact = "bin"
target = "x86_64-unknown-none"

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"

[features]
test = [ "renim-kernel/test" ]
